infra/ingresses/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-app-ingress
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/limit-connections: "5"
    nginx.ingress.kubernetes.io/auth-url: http://auth-app-service.default.svc.cluster.local:9999/token/validate
    nginx.ingress.kubernetes.io/limit-rps: "2"
    nginx.ingress.kubernetes.io/limit-rpm: "20"
spec:
  rules:
  - host: drmarkdown.com
    http:
      paths:
      - pathType: Prefix
        path: "/role/create"
        backend:
          service:
            name: auth-app-service
            port: 
              number: 9999
      - pathType: Prefix
        path: "/role/info/(.*)"
        backend:
          service:
            name: auth-app-service
            port: 
              number: 9999
      - pathType: Prefix
        path: "/user/create"
        backend:
          service:
            name: auth-app-service
            port: 
              number: 9999
      - pathType: Prefix
        path: "/user/info/(.*)"
        backend:
          service:
            name: auth-app-service
            port: 
              number: 9999
      - pathType: Prefix
        path: "/user/login"
        backend:
          service:
            name: auth-app-service
            port: 
              number: 9999
