infra/ingresses/doc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: doc-app-ingress
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/limit-connections: "5"
    nginx.ingress.kubernetes.io/doc-url: http://doc-app-service.default.svc.cluster.local:9999/token/validate
    nginx.ingress.kubernetes.io/limit-rps: "2"
    nginx.ingress.kubernetes.io/limit-rpm: "20"
spec:
  rules:
  - host: drmarkdown.com
    http:
      paths:
      - pathType: Prefix
        path: "/doc/create"
        backend:
          service:
            name: doc-app-service
            port: 
              number: 9998
      - pathType: Prefix
        path: "/doc/all/(.*)"
        backend:
          service:
            name: doc-app-service
            port: 
              number: 9998
      - pathType: Prefix
        path: "/doc/(.*)"
        backend:
          service:
            name: doc-app-service
            port: 
              number: 9998
      - pathType: Prefix
        path: "/doc/recent"
        backend:
          service:
            name: doc-app-service
            port: 
              number: 9998
      - pathType: Prefix
        path: "/doc/update"
        backend:
          service:
            name: doc-app-service
            port: 
              number: 9998
