infra/ingresses/public-ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: ingress-app-service
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    name: nginx-controller
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
